Fixed alignment of words in header

--- a/static/css/h.css
+++ b/static/css/h.css
@@ -20,6 +20,7 @@ header {
         background-color: black;
         position: fixed;
         width: 100%;
+        height: 60px;
         z-index: 1;
         padding: 0px;
         margin: 0px;
@@ -58,8 +59,6 @@ h4 {
 
 .header-title {
         position: absolute;
-        top: 50%;
-        transform: translate(0, -50%);
         left: 50%;
         margin-right: 50%;
         transform: translate(-50%, -50%);
@@ -67,11 +66,7 @@ h4 {
         font-weight: normal;
         font-style: normal;
         color: white;
-        text-align: center;
         font-size: 40px;
-        padding: 0px;
-        margin: 10px;
-
 }
 
 .album {
